--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.0.4'
+    ext.kotlin_version = '1.0.5-3'
     repositories {
         jcenter()
     }
@@ -24,7 +24,7 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'org.mockito:mockito-core:2.2.8'
+    compile 'org.mockito:mockito-core:2.4.1'
     testCompile 'junit:junit:4.12'
 }
 
