--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,16 @@ apply from: "$rootDir/gradle/version.gradle"
 group = 'com.github.tmurakami'
 version = version_name
 
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
+
 repositories {
     jcenter()
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'org.mockito:mockito-core:2.5.4'
+    compile 'org.mockito:mockito-core:2.6.0'
     testCompile 'junit:junit:4.12'
 }
 
