--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,8 @@
+machine:
+  environment:
+    GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError"'
+  java:
+    version: openjdk8
 test:
   post:
     - mkdir $CIRCLE_TEST_REPORTS/junit
