--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,13 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'org.jacoco:org.jacoco.core:0.7.7.201606060606'
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.14.0'
     }
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'jacoco'
 apply plugin: 'maven'
 apply plugin: 'com.github.ben-manes.versions'
 
@@ -37,3 +39,10 @@ task sourcesJar(type: Jar) {
 artifacts {
     archives sourcesJar
 }
+
+jacocoTestReport {
+    reports {
+        html.enabled = true
+        xml.enabled = true
+    }
+}.dependsOn test
