--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,10 @@ machine:
   java:
     version: openjdk8
 test:
+  override:
+    - ./gradlew jacocoTestReport
   post:
+    - mkdir $CIRCLE_TEST_REPORTS/jacoco
+    - find . -type f -regex '.*/build/reports/jacoco/.*\.xml' -exec cp -p {} $CIRCLE_TEST_REPORTS/jacoco \;
     - mkdir $CIRCLE_TEST_REPORTS/junit
-    - find . -type f -regex ".*/build/test-results/.*xml" -exec cp -p {} $CIRCLE_TEST_REPORTS/junit \;
+    - find . -type f -regex '.*/build/test-results/.*\.xml' -exec cp -p {} $CIRCLE_TEST_REPORTS/junit \;
