--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,14 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'org.jetbrains.dokka:dokka-gradle-plugin:0.9.13'
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.14.0'
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'maven'
+apply plugin: 'org.jetbrains.dokka'
 apply plugin: 'com.github.ben-manes.versions'
 
 apply from: "$rootDir/gradle/version.gradle"
@@ -35,6 +37,15 @@ task sourcesJar(type: Jar) {
     from sourceSets.main.allSource
 }
 
+dokka.outputDirectory = javadoc.destinationDir
+javadoc.dependsOn dokka
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
 artifacts {
     archives sourcesJar
+    archives javadocJar
 }
