--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,11 @@ configurations {
 
 dependencies {
     ktlint 'com.github.shyiko:ktlint:0.7.0'
-    compile 'org.mockito:mockito-core:2.7.0'
+    implementation 'org.mockito:mockito-core:2.7.0'
     compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-inline:2.8.9'
-    testCompile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-inline:2.8.9'
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
 task ktlint(type: JavaExec) {
