--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ configurations {
 
 dependencies {
     ktlint 'com.github.shyiko:ktlint:0.8.3'
-    implementation 'org.mockito:mockito-core:2.7.0'
+    compile 'org.mockito:mockito-core:2.7.0'
     compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-inline:2.8.47'
