--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.0.7'
+    ext.kotlin_version = '1.1.3'
     repositories {
         jcenter()
     }
@@ -10,7 +10,7 @@ buildscript {
     }
 }
 
-apply plugin: 'kotlin'
+apply plugin: 'org.jetbrains.kotlin.jvm'
 apply plugin: 'maven'
 apply plugin: 'org.jetbrains.dokka'
 apply plugin: 'com.github.ben-manes.versions'
@@ -32,10 +32,10 @@ configurations {
 dependencies {
     ktlint 'com.github.shyiko:ktlint:0.8.3'
     compile 'org.mockito:mockito-core:2.7.0'
-    compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compileOnly 'org.jetbrains.kotlin:kotlin-stdlib:1.0.7'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-inline:2.8.47'
-    testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib:${project.properties['testKotlinVersion'] ?: kotlin_version}"
 }
 
 task ktlint(type: JavaExec) {
@@ -73,3 +73,6 @@ artifacts {
     archives sourcesJar
     archives javadocJar
 }
+
+compileKotlin.kotlinOptions.languageVersion = '1.0'
+compileTestKotlin.kotlinOptions.freeCompilerArgs += '-Xskip-runtime-version-check'
