--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ test:
     - ./gradlew -PtestKotlinVersion=1.0.7 test
     - ./gradlew jacocoTestReport
   post:
-    - mkdir $CIRCLE_TEST_REPORTS/jacoco
-    - find . -type f -regex '.*/build/reports/jacoco/.*\.xml' -exec cp -p {} $CIRCLE_TEST_REPORTS/jacoco \;
+    - mkdir $CIRCLE_ARTIFACTS/jacoco
+    - find . -type f -regex '.*/build/reports/jacoco/.*\.xml' -exec cp -p {} $CIRCLE_ARTIFACTS/jacoco \;
     - mkdir $CIRCLE_TEST_REPORTS/junit
     - find . -type f -regex '.*/build/test-results/.*\.xml' -exec cp -p {} $CIRCLE_TEST_REPORTS/junit \;
