Set kotlinOptions.apiVersion

--- a/build.gradle
+++ b/build.gradle
@@ -29,13 +29,15 @@ configurations {
     ktlint
 }
 
+def test_kotlin_version = project.properties['testKotlinVersion'] ?: kotlin_version
+
 dependencies {
     ktlint 'com.github.shyiko:ktlint:0.8.3'
     compile 'org.mockito:mockito-core:2.7.0'
     compileOnly 'org.jetbrains.kotlin:kotlin-stdlib:1.0.7'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-inline:2.8.47'
-    testImplementation "org.jetbrains.kotlin:kotlin-stdlib:${project.properties['testKotlinVersion'] ?: kotlin_version}"
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$test_kotlin_version"
 }
 
 task ktlint(type: JavaExec) {
@@ -74,5 +76,9 @@ artifacts {
     archives javadocJar
 }
 
-compileKotlin.kotlinOptions.languageVersion = '1.0'
-compileTestKotlin.kotlinOptions.freeCompilerArgs += '-Xskip-runtime-version-check'
+compileKotlin.kotlinOptions {
+    apiVersion = languageVersion = '1.0'
+}
+compileTestKotlin.kotlinOptions {
+    apiVersion = languageVersion = (test_kotlin_version =~ /\d+\.\d+/)[0]
+}
