--- a/build.gradle
+++ b/build.gradle
@@ -82,3 +82,9 @@ compileKotlin.kotlinOptions {
 compileTestKotlin.kotlinOptions {
     apiVersion = languageVersion = (test_kotlin_version =~ /\d+\.\d+/)[0]
 }
+
+dependencyUpdates.resolutionStrategy {
+    componentSelection.all {
+        if (candidate.version =~ /(?i)-(?:alpha|beta|rc)[-\d]?/) reject('Release candidate')
+    }
+}
