--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ version = version_name
 
 repositories {
     jcenter()
+    maven { url 'https://dl.bintray.com/mockito/maven' }
 }
 
 configurations {
@@ -30,13 +31,14 @@ configurations {
 }
 
 def test_kotlin_version = project.properties['testKotlinVersion'] ?: kotlin_version
+def test_mockito_version = project.properties['testMockitoVersion'] ?: 'latest.release'
 
 dependencies {
     ktlint 'com.github.shyiko:ktlint:0.8.3'
     compile 'org.mockito:mockito-core:2.7.0'
     compileOnly 'org.jetbrains.kotlin:kotlin-stdlib:1.0.7'
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:2.8.47'
+    testImplementation "org.mockito:mockito-core:$test_mockito_version"
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$test_kotlin_version"
 }
 
