--- a/build.gradle
+++ b/build.gradle
@@ -31,16 +31,14 @@ configurations {
 }
 
 def test_kotlin_version = project.properties['testKotlinVersion'] ?: kotlin_version
-def test_mockito_version = project.properties['testMockitoVersion'] ?: 'latest.release'
-def test_mockito_type = project.properties['testMockitoType'] ?: 'core'
 
 dependencies {
     ktlint 'com.github.shyiko:ktlint:0.8.3'
     compile 'org.mockito:mockito-core:2.7.0'
     compileOnly 'org.jetbrains.kotlin:kotlin-stdlib:1.0.7'
-    testImplementation 'junit:junit:4.12'
-    testImplementation "org.mockito:mockito-${test_mockito_type}:$test_mockito_version"
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$test_kotlin_version"
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.mockito:mockito-core:${project.properties['testMockitoVersion'] ?: 'latest.release'}"
 }
 
 task ktlint(type: JavaExec) {
@@ -79,15 +77,13 @@ artifacts {
     archives javadocJar
 }
 
-compileKotlin.kotlinOptions {
-    apiVersion = languageVersion = '1.0'
-}
-compileTestKotlin.kotlinOptions {
-    apiVersion = languageVersion = (test_kotlin_version =~ /\d+\.\d+/)[0]
+compileKotlin.kotlinOptions { apiVersion = languageVersion = '1.0' }
+compileTestKotlin.kotlinOptions { apiVersion = languageVersion = (test_kotlin_version =~ /\d+\.\d+/)[0] }
+
+processTestResources {
+    if (!project.hasProperty('usingInlineMockMaker')) exclude 'mockito-extensions/org.mockito.plugins.MockMaker'
 }
 
 dependencyUpdates.resolutionStrategy {
-    componentSelection.all {
-        if (candidate.version =~ /(?i)-(?:alpha|beta|rc)[-\d]?/) reject('Release candidate')
-    }
+    componentSelection.all { if (candidate.version =~ /(?i)-(?:alpha|beta|rc)[-\d]?/) reject('Release candidate') }
 }
