--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ configurations {
     ktlint
 }
 
-def test_kotlin_version = project.properties['testKotlinVersion'] ?: kotlin_version
+def test_kotlin_version = properties['testKotlinVersion'] ?: kotlin_version
 
 dependencies {
     ktlint 'com.github.shyiko:ktlint:0.8.3'
