--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,22 @@
 buildscript {
-    ext.kotlin_version = '1.1.51'
+    ext.kotlin_version = '1.2.21'
     repositories {
         jcenter()
+        maven { url 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'org.jetbrains.dokka:dokka-gradle-plugin:0.9.13'
+        classpath 'org.jetbrains.dokka:dokka-gradle-plugin:0.9.15'
+        classpath "gradle.plugin.org.jlleitschuh.gradle:ktlint-gradle:3.0.1"
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
-        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.1'
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.3'
     }
 }
 
 apply plugin: 'org.jetbrains.kotlin.jvm'
 apply plugin: 'maven'
 apply plugin: 'org.jetbrains.dokka'
+apply plugin: "org.jlleitschuh.gradle.ktlint"
 apply plugin: 'com.github.ben-manes.versions'
 apply plugin: 'org.junit.platform.gradle.plugin'
 
@@ -30,33 +33,21 @@ repositories {
     maven { url 'https://dl.bintray.com/mockito/maven' }
 }
 
-configurations {
-    ktlint
-}
-
 dependencies {
-    ktlint 'com.github.shyiko:ktlint:0.8.3'
-    compileOnly 'org.jetbrains.kotlin:kotlin-stdlib:1.0.7'
+    compile 'org.jetbrains.kotlin:kotlin-stdlib:1.1.61'
     compileOnly 'org.mockito:mockito-core:2.7.0'
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$test_kotlin_version"
     testImplementation "org.mockito:mockito-core:${project.properties['testMockitoVersion'] ?: 'latest.release'}"
-    def junitVersion = '5.0.1'
+    def junitVersion = '5.0.3'
     testCompileOnly "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
 
-task ktlint(type: JavaExec) {
-    main = 'com.github.shyiko.ktlint.Main'
-    classpath = configurations.ktlint
-    args = ['src/**/*.kt']
-}
-
-check.dependsOn ktlint
-
-task ktlintFormat(type: JavaExec) {
-    main = 'com.github.shyiko.ktlint.Main'
-    classpath = configurations.ktlint
-    args = ['-F', 'src/**/*.kt']
+ktlint {
+    version = '0.15.1'
+    outputToConsole = true
+    reporters = ['CHECKSTYLE']
+    ignoreFailures = System.getenv('CI') as boolean
 }
 
 task sourcesJar(type: Jar) {
@@ -83,7 +74,7 @@ artifacts {
 
 jar.manifest.attributes 'Automatic-Module-Name': 'com.github.tmurakami.mockito4k'
 
-compileKotlin.kotlinOptions { apiVersion = languageVersion = '1.0' }
+compileKotlin.kotlinOptions { apiVersion = languageVersion = '1.1' }
 compileTestKotlin.kotlinOptions { apiVersion = languageVersion = (test_kotlin_version =~ /\d+\.\d+/)[0] }
 
 processTestResources {
@@ -91,5 +82,5 @@ processTestResources {
 }
 
 dependencyUpdates.resolutionStrategy {
-    componentSelection.all { if (candidate.version =~ /(?i)-(?:alpha|beta|rc)[-\d]?/) reject('Release candidate') }
+    componentSelection.all { if (candidate.version =~ /(?i)-(?:alpha|beta|rc|m)[-\d]?/) reject('Release candidate') }
 }
