--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,15 @@
 buildscript {
-    ext.kotlin_version = '1.2.21'
+    ext.kotlin_version = '1.2.30'
     repositories {
         jcenter()
         maven { url 'https://plugins.gradle.org/m2/' }
-        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'org.jetbrains.dokka:dokka-android-gradle-plugin:0.9.16-eap-3'
-        classpath "gradle.plugin.org.jlleitschuh.gradle:ktlint-gradle:3.0.1"
+        classpath 'org.jetbrains.dokka:dokka-android-gradle-plugin:0.9.16'
+        classpath "gradle.plugin.org.jlleitschuh.gradle:ktlint-gradle:3.1.0"
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
-        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.3'
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.0'
     }
 }
 
@@ -39,13 +38,13 @@ dependencies {
     compile 'org.mockito:mockito-core:2.7.0'
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$test_kotlin_version"
     testImplementation "org.mockito:mockito-core:${project.properties['testMockitoVersion'] ?: 'latest.release'}"
-    def junitVersion = '5.0.3'
+    def junitVersion = '5.1.0'
     testCompileOnly "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
 
 ktlint {
-    version = '0.15.1'
+    version = '0.19.0'
     outputToConsole = true
     reporters = ['CHECKSTYLE']
     ignoreFailures = System.getenv('CI') as boolean
