--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,10 @@ artifacts {
 
 jar.manifest.attributes 'Automatic-Module-Name': 'com.github.tmurakami.mockito4k'
 
-compileKotlin.kotlinOptions { apiVersion = languageVersion = '1.1' }
+compileKotlin.kotlinOptions {
+    apiVersion = languageVersion = '1.1'
+//    freeCompilerArgs += ['-Xno-param-assertions', '-Xno-call-assertions']
+}
 compileTestKotlin.kotlinOptions { apiVersion = languageVersion = (test_kotlin_version =~ /\d+\.\d+/)[0] }
 
 processTestResources {
