--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.2.31'
+    ext.kotlin_version = '1.2.41'
     repositories {
         jcenter()
         maven { url 'https://plugins.gradle.org/m2/' }
@@ -7,9 +7,9 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'org.jetbrains.dokka:dokka-android-gradle-plugin:0.9.16'
-        classpath "gradle.plugin.org.jlleitschuh.gradle:ktlint-gradle:3.2.0"
+        classpath "gradle.plugin.org.jlleitschuh.gradle:ktlint-gradle:3.3.0"
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
-        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.0'
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.1'
     }
 }
 
@@ -38,15 +38,14 @@ dependencies {
     compile 'org.mockito:mockito-core:2.7.0'
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$test_kotlin_version"
     testImplementation "org.mockito:mockito-core:${project.properties['testMockitoVersion'] ?: 'latest.release'}"
-    def junitVersion = '5.1.0'
+    def junitVersion = '5.1.1'
     testCompileOnly "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
 
 ktlint {
-    version = '0.20.0'
-    outputToConsole = true
-    reporters = ['CHECKSTYLE']
+    version = '0.22.0'
+    reporters = ['PLAIN', 'CHECKSTYLE']
     ignoreFailures = System.getenv('CI') as boolean
 }
 
@@ -79,7 +78,7 @@ jar.manifest.attributes 'Automatic-Module-Name': 'com.github.tmurakami.mockito4k
 
 compileKotlin.kotlinOptions {
     apiVersion = languageVersion = '1.1'
-//    freeCompilerArgs += ['-Xno-param-assertions', '-Xno-call-assertions']
+    freeCompilerArgs += ['-Xno-param-assertions', '-Xno-call-assertions']
 }
 compileTestKotlin.kotlinOptions { apiVersion = languageVersion = (test_kotlin_version =~ /\d+\.\d+/)[0] }
 
